--- a/develop/styles.css
+++ b/develop/styles.css
@@ -4,22 +4,36 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
 }
+.hidden {
+  display:none;
+}
 
 .container {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  height: 100vh;
+  width:100vw;
   align-items: center;
   justify-content: center;
 }
 
 .dealer-container {
+  display:grid;
+  grid-template-rows: 20% 50%;
+  width:100vw;
+  height: 50vh;
   background-color: #2c3e50;
   color: #fff;
+  text-align: center;
 }
 
+
 .player-container {
+  width:100vw;
+  height: 50vh;
+  text-align: center;
+  align-items: center;
+  display:grid;
   background-color: #3498db;
   color: #fff;
 }
@@ -42,20 +56,23 @@ body {
 
 .button-container {
   display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+  justify-content: center;
 }
 
 .button {
   padding: 10px 20px;
-  background-color: #16a085;
+  background-color: #0d38ad;
   color: #fff;
   border: none;
   border-radius: 5px;
+  margin-left:10px;
+  margin-right: 10px;
+  margin-bottom:10px;
   cursor: pointer;
+  height: 40px;
   transition: background-color 0.3s ease;
 }
 
 .button:hover {
-  background-color: #1abc9c;
+  background-color: #0b7faa;
 }
