--- a/develop/styles.css
+++ b/develop/styles.css
@@ -52,6 +52,8 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   margin: 0 5px;
+  color: black;
+  font-size: xx-large;
 }
 
 .button-container {
@@ -75,4 +77,8 @@ body {
 
 .button:hover {
   background-color: #0b7faa;
+}
+
+.disabled {
+  background-color: grey;
 }
