--- a/develop/styles.css
+++ b/develop/styles.css
@@ -38,7 +38,7 @@ body {
   color: #fff;
 }
 
-.hand {
+.playerHand, .dealerHand {
   display: flex;
   justify-content: center;
   align-items: center;
