--- a/develop/styles.css
+++ b/develop/styles.css
@@ -5,40 +5,40 @@ body {
   background-color: #f0f0f0;
 }
 .hidden {
-  display:none;
+  display: none;
 }
 
 .container {
   display: grid;
   grid-template-rows: 50% 50%;
   height: 100vh;
-  width:100vw;
+  width: 100vw;
   align-items: center;
   justify-content: center;
 }
 
 .dealer-container {
-  display:grid;
+  display: grid;
   grid-template-rows: 20% 50%;
-  width:100vw;
+  width: 100vw;
   height: 50vh;
   background-color: #2c3e50;
   color: #fff;
   text-align: center;
 }
 
-
 .player-container {
-  width:100vw;
+  width: 100vw;
   height: 50vh;
   text-align: center;
   align-items: center;
-  display:grid;
+  display: grid;
   background-color: #3498db;
   color: #fff;
 }
 
-.playerHand, .dealerHand {
+.playerHand,
+.dealerHand {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,9 +67,9 @@ body {
   color: #fff;
   border: none;
   border-radius: 5px;
-  margin-left:10px;
+  margin-left: 10px;
   margin-right: 10px;
-  margin-bottom:10px;
+  margin-bottom: 10px;
   cursor: pointer;
   height: 40px;
   transition: background-color 0.3s ease;
@@ -83,3 +83,61 @@ body {
   background-color: grey;
   cursor: not-allowed;
 }
+
+#customAlert {
+  position: fixed;
+  top: 30%;
+  left: 30%;
+  width: 40%;
+  background-color: #fff;
+  border: 2px solid #ff0000;
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 9999;
+}
+#customWonAlert {
+  position: fixed;
+  top: 30%;
+  left: 30%;
+  width: 40%;
+  background-color: #fff;
+  border: 2px solid #0ed222;
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 9999;
+}
+
+.alertContent {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+#closeButton {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ff0000;
+  color: #fff;
+  font-size: 24px;
+  line-height: 40px;
+  cursor: pointer;
+}
+
+#closeWonButton {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #00ff00;
+  color: #fff;
+  font-size: 24px;
+  line-height: 40px;
+  cursor: pointer;
+}
+
